--- a/BMWShareNow/Base.lproj/LaunchScreen.xib
+++ b/BMWShareNow/Base.lproj/LaunchScreen.xib
@@ -1,41 +1,87 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6214" systemVersion="14A314h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6207"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="485" height="735"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015 Papafish. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BMWShareNow" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="140" width="441" height="43"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bmw_i3_orange" translatesAutoresizingMaskIntoConstraints="NO" id="hrh-rB-wEC">
+                    <rect key="frame" x="0.0" y="0.0" width="485" height="735"/>
+                </imageView>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TGE-er-6Ck">
+                    <rect key="frame" x="0.0" y="0.0" width="485" height="735"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Ctt-Rm-wHj">
+                        <rect key="frame" x="0.0" y="0.0" width="485" height="735"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                    <vibrancyEffect>
+                        <blurEffect style="dark"/>
+                    </vibrancyEffect>
+                </visualEffectView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sharenow_logo" translatesAutoresizingMaskIntoConstraints="NO" id="rlu-OA-fIy">
+                    <rect key="frame" x="172" y="140" width="140" height="140"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="140" id="avd-V2-dFh"/>
+                        <constraint firstAttribute="width" constant="140" id="t1v-wq-006"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zv-cz-Muc">
+                    <rect key="frame" x="143" y="300" width="200" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="bSr-cZ-eDv"/>
+                        <constraint firstAttribute="height" constant="40" id="mZ6-Dq-9ex"/>
+                    </constraints>
+                    <attributedString key="attributedText">
+                        <fragment content="Share">
+                            <attributes>
+                                <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <font key="NSFont" size="36" name="Helvetica"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                            </attributes>
+                        </fragment>
+                        <fragment content="Now">
+                            <attributes>
+                                <color key="NSColor" red="0.0" green="0.63921568627450975" blue="0.87450980392156863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <font key="NSFont" size="36" name="Helvetica"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                            </attributes>
+                        </fragment>
+                    </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstAttribute="bottom" secondItem="TGE-er-6Ck" secondAttribute="bottom" id="GLv-vx-d9k"/>
+                <constraint firstItem="8Zv-cz-Muc" firstAttribute="top" secondItem="rlu-OA-fIy" secondAttribute="bottom" constant="20" id="I9l-we-GOX"/>
+                <constraint firstAttribute="centerX" secondItem="8Zv-cz-Muc" secondAttribute="centerX" id="Ieo-Or-Ity"/>
+                <constraint firstItem="TGE-er-6Ck" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="VKT-AY-8Kn"/>
+                <constraint firstAttribute="trailing" secondItem="TGE-er-6Ck" secondAttribute="trailing" id="Y0p-ww-1bD"/>
+                <constraint firstItem="rlu-OA-fIy" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="140" id="YOR-Wh-agB"/>
+                <constraint firstAttribute="centerX" secondItem="rlu-OA-fIy" secondAttribute="centerX" id="fFD-MZ-fG5"/>
+                <constraint firstItem="hrh-rB-wEC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="fQk-JK-oHk"/>
+                <constraint firstAttribute="trailing" secondItem="hrh-rB-wEC" secondAttribute="trailing" id="kAf-0G-LQf"/>
+                <constraint firstItem="TGE-er-6Ck" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="mt0-2M-pH8"/>
+                <constraint firstAttribute="bottom" secondItem="hrh-rB-wEC" secondAttribute="bottom" id="nQY-4R-c9y"/>
+                <constraint firstItem="hrh-rB-wEC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="yap-df-n0g"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="548" y="455"/>
+            <point key="canvasLocation" x="550.5" y="582.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="bmw_i3_orange" width="960" height="640"/>
+        <image name="sharenow_logo" width="60" height="60"/>
+    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
